Adding slack-desktop and fixing URL's in readme after it was moved from gitlab to github

--- a/playbook.yml
+++ b/playbook.yml
@@ -16,6 +16,7 @@
     - utilities
     - clusterssh
     - google-chrome
+    - slack-desktop
     - nvidia-driver
     - docker-ce
     - power-management
