--- a/roles/nvidia-driver/tasks/main.yaml
+++ b/roles/nvidia-driver/tasks/main.yaml
@@ -17,8 +17,11 @@
 - name: "Install Nvidia headless driver"
   apt:
     name:
-      - nvidia-headless-418
-      - nvidia-utils-418
+      - nvidia-driver-430
+      - nvidia-dkms-430
+      - nvidia-headless-430
+      - nvidia-headless-no-dkms-430
+      - nvidia-utils-430
       - nvidia-common
     state: latest
   when: nvidia_exists.rc == 0
